reduce lineage height to prevent initial overflow

--- a/website/src/components/dbt-editor/styles.module.css
+++ b/website/src/components/dbt-editor/styles.module.css
@@ -22,7 +22,7 @@
 }
 
 .dbtLineageContainer {
-  height: 268px;
+  height: 265px;
   width: 100%;
   padding: 10px;
 }
